-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
1
-
4790a06b1 (dev), cca73cecb (6.9), 18ad88079 (tqtc/lts-6.8)
-
Foundation Sprint 129
Currently compiling Qt for Windows fails if clipboard -feature is disabled.
- clones
-
QTBUG-135693 Compile Android without accessibility -feature
-
- Closed
-
- is cloned by
-
QTBUG-135893 Allow configuring Windows without highdpiscaling feature
-
- Closed
-
-
QTBUG-135946 Allow configuring without quicktemplates2-hover feature
-
- Closed
-