Allow configuring Qt without clipboard on Windows

Most feature guards were already in place, this commit adds the
missing ones.

Pick-to: 6.8
Fixes: QTBUG-135890
Change-Id: I1fbfad6552b2896d867a29134a2add693dbd136f
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 4790a06b1684244841c4be90369561df0a9f97c8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>