src/plugins/platforms/windows/qwindowsapplication.cpp
@@ -2,7 +2,9 @@
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only
 
 #include "qwindowsapplication.h"
+#if QT_CONFIG(clipboard)
 #include "qwindowsclipboard.h"
+#endif
 #include "qwindowscontext.h"
 #include "qwindowsmimeregistry.h"
 #include "qwin10helpers.h"
